# le-wm

./: .dockerignore  .gitattributes  .gitignore  README.md  TRAINING.md  convert_paper_weights.py  devtools.py  download_weights.py  eval.py  hierarchical_lewm.py  hierarchical_plan.py  plan_hierarchical.py  precompute_embeddings.py  pyproject.toml  train.py  train_hierarchical.py  utils.py  waypoint_sampler.py
analysis/: visualize_dataset.py
analysis/diagnostics/: HIERARCHICAL_DEBUG.md  hierarchical_probe.py
analysis/heat maps/: README.md  cost_landscape.py  latent_cost_vs_offset.py
analysis/latent_analysis/: README.md  macro_action_tsne.py
analysis/path_trajectories/: README.md  traj_recording.py  viz_panel_grid.py  viz_trajectories.py
baseline/cube/: lewm_epoch_10_object.ckpt  ogb_cube_results_epochs_10.txt  ogb_cube_results_epochs_10_horizon_10_budget_100.txt
baseline/pusht/: lewm_epoch_10_object.ckpt  pusht_results_epochs_10.txt  pusht_results_epochs_10_horizon_10_budget_100.txt
baseline/reacher/: dmc_results_epochs_10.txt  dmc_results_epochs_10_horizon_10_budget_100.txt  lewm_epoch_10_object.ckpt
baseline/tworoom/: hierarchical_lewm_object.ckpt  hierarchical_results_inner_iters_30.txt  tworoom_results_epochs_9.txt
cloud/: Dockerfile  GCP.md  MODAL.md  bootstrap_gcp.sh  modal_train.py
config/eval/: hierarchical.yaml  hierarchical_cube.yaml  hierarchical_pusht.yaml  hierarchical_reacher.yaml  hierarchical_tworoom.yaml  reacher.yaml
config/train/: hierarchical.yaml  lewm.yaml
config/train/setup/: cloud_a100.yaml  cloud_a10g.yaml  cpu.yaml  local_rtx2080.yaml  mps.yaml
diagnostics/: HIERARCHICAL_DEBUG.md  hierarchical_probe.py
lightning_logs/version_3/: hparams.yaml
lightning_logs/version_5/: metrics.csv
long_horizon_experiments/two rooms/flat_offset100/: tworoom_results.txt
long_horizon_experiments/two rooms/flat_offset25/: tworoom_results.txt
models/: hierarchical_lewm_epoch_14_tworooms_object.ckpt
plans/: REACHER_HANDOFF.md  _make_waypoint_pdf.py  baseline_plan.md  baselines_summary.md  hlewm_train_test_methodology.md  issues.md  latenst_cost_landscape_plan.md  latent_analysis_probes.md  path_trajectories_analysis.md  plan.md  temp_exp.md  tworoom_dataset_structure.md
qualitative analysis/diagnostics/: HIERARCHICAL_DEBUG.md  hierarchical_probe.py
qualitative analysis/heat maps/: README.md  _landscape_lib.py  cost_landscape.py  landscape_reachability_pair.py  landscape_static_vs_highlevel.py  latent_cost_vs_offset.py
qualitative analysis/latent_analysis/: README.md  latent_grid_tsne.py  macro_action_tsne.py  macro_probe.py
qualitative analysis/path_trajectories/: README.md  viz_panel_grid.py
results/baseline/tworoom/: lewm_epoch_9_object.ckpt  (+1 more)
scripts/: convert_paper_weights.py  devtools.py  download_datasets.py  download_weights.py
utils/: utils.py
(+65 files in other folders)
