[project]
name = "le-wm"
version = "0.0.1"
description = "LeWorldModel"
requires-python = ">=3.10,<3.13"

dependencies = [
    "datasets>=2.14.4",
    "hydra-core>=1.3.2",
    "imageio>=2.37.3",
    "lightning>=2.6.1",
    "scikit-learn>=1.7.2",
    "stable-pretraining>=0.1.6",
    "stable-worldmodel[env,train]==0.0.6",
    "transformers==4.57.6",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "wandb>=0.27.0",
]

readme = "README.md"

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-env>=1.1.3"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch$prerelease"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = ["pyproject.toml:(?i)version"
                ]
bump_message = "chore(bump): $current_version → $new_version [skip-ci]"

# https://github.com/nat-n/poethepoet
[tool.poe]
include = "poe.toml"

[tool.pdm]
distribution = false

[tool.uv.sources]
deepsnap = { git = "https://github.com/snap-stanford/deepsnap.git" }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[dependency-groups]
dev = [
    "commitizen>=3.13.0",
    "poethepoet>=0.24.4",
    "ipykernel>=6.29.5",
    "ruff>=0.11.13",
]
